developer/src/kmc-package/test/fixtures/invalid/basic.kmn
store(&name) 'basic desktop-only kmx'
store(&keyboardversion) '1.0'

begin unicode > use(main)

group(main) using keys